syntax = "proto3";

package regen.ecocredit.v1;

import "regen/ecocredit/v1/types.proto";

option go_package = "github.com/regen-network/regen-ledger/x/ecocredit/core";

// EventCreateClass is an event emitted when a credit class is created.
message EventCreateClass {

  // class_id is the unique identifier of the credit class.
  string class_id = 1;
}

// EventCreateProject is an event emitted when a project is created.
message EventCreateProject {

  // project_id is the unique identifier of the project.
  string project_id = 1;
}

// EventCreateBatch is an event emitted when a credit batch is created.
message EventCreateBatch {

  // batch_denom is the unique identifier of the credit batch.
  string batch_denom = 1;

  // issuer is the account address of the issuer of the credit batch.
  string issuer = 2;
}

// EventMint is an event emitted when a credits are minted to a credit batch.
message EventMint {

  // batch_denom is the unique identifier of the credit batch within which the
  // credits were minted.
  string batch_denom = 1;

  // issuer is the account address of the issuer of the credit batch that has
  // minted credits to the credit batch.
  string issuer = 2;

  // origin_tx is the transaction from another chain or registry that triggered
  // the minting of credits within the credit batch.
  OriginTx origin_tx = 3;
}

// EventTransfer is an event emitted when credits are transferred from one
// account to another including transfers to or from a module account.
message EventTransfer {

  // sender is the sender of the credits. In the case that the credits were
  // transferred from a base account, this will be the account address. In the
  // case that the credits were transferred from a module, this will be the
  // module address.
  string sender = 1;

  // recipient is the recipient of the credits. In the case that the credits
  // were transferred to a base account, this will be the account address. In
  // the case that the credits were transferred to a module, this will be the
  // module address.
  string recipient = 2;

  // batch_denom is the unique identifier of the credit batch.
  string batch_denom = 3;

  // tradable_amount is the decimal number of tradable credits received.
  string tradable_amount = 4;

  // retired_amount is the decimal number of retired credits received.
  string retired_amount = 5;
}

// EventRetire is an event emitted when credits are retired. When credits are
// retired from multiple batches in the same transaction, a separate event is
// emitted for each batch_denom. This allows for easier indexing.
message EventRetire {

  // owner is the account that owns the retired credits. This will be the
  // account receiving credits in the case that credits were retired upon
  // issuance using Msg/CreateBatch, retired upon transfer using Msg/Send,
  // retired upon taking from a basket using basket.Msg/Take, or retired
  // upon purchase using marketplace.Msg/BuyDirect.
  string owner = 1;

  // batch_denom is the unique identifier of the credit batch within which the
  // credits were retired.
  string batch_denom = 2;

  // amount is the decimal number of credits that have been retired.
  string amount = 3;

  // jurisdiction is the jurisdiction of the beneficiary or buyer of the retired
  // credits. It is a string of the form
  // <country-code>[-<sub-national-code>[ <postal-code>]], with the first two
  // fields conforming to ISO 3166-2, and postal-code being up to 64
  // alphanumeric characters.
  string jurisdiction = 4;
}

// EventCancel is an event emitted when credits are cancelled. When credits are
// cancelled from multiple batches in the same transaction, a separate event is
// emitted for each batch_denom. This allows for easier indexing.
message EventCancel {

  // owner is the account which has cancelled the credits.
  string owner = 1;

  // batch_denom is the unique identifier of the credit batch within which the
  // credits were cancelled.
  string batch_denom = 2;

  // amount is the decimal number of credits that have been cancelled.
  string amount = 3;
}

// EventClassAdminUpdated is emitted when the admin address of a credit class is
// changed.
message EventClassAdminUpdated {

  // class_id is the unique identifier of the class that was updated.
  string class_id = 1;
}

// EventClassIssuersUpdated is emitted when the issuer list for a credit class
// is updated.
message EventClassIssuersUpdated {

  // class_id is the unique identifier of the class that was updated.
  string class_id = 1;
}

// EventClassMetadataUpdated is emitted when the credit class metadata is
// changed.
message EventClassMetadataUpdated {

  // class_id is the unique identifier of the class that was updated.
  string class_id = 1;
}

// EventProjectAdminUpdated is emitted when the project admin is changed.
message EventProjectAdminUpdated {

  // project_id is the unique identifier of the project that was updated.
  string project_id = 1;
}

// EventProjectMetadataUpdated is emitted when the project metadata is changed.
message EventProjectMetadataUpdated {

  // project_id is the unique identifier of the project that was updated.
  string project_id = 1;
}

// EventBatchSealed is emitted when a batch is sealed.
message EventBatchSealed {

  // batch_denom is the denom of the batch that was sealed.
  string batch_denom = 1;
}
